# exactcli

./: README.md  pyproject.toml
exactcli/: __init__.py  __main__.py
sashimi/: __init__.py  __main__.py
