[build-system]
# requires = ["setuptools >= 40.6.0", "wheel"]
requires = ["hatchling", "wheel"]

# build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name="exactcli"
dynamic = [ "version" ]

dependencies = [
    'requests',
    'python-dotenv'
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "CLI utility and python client package for Exact headless CMS"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yaroslaff/exactcli"
Issues = "https://github.com/yaroslaff/exactcli/issues"


[project.scripts]
exactcli = "exactcli:__main__.main"

[tool.hatch.version]
path = 'exactcli/__init__.py'
